--- a/server/app.ipynb
+++ b/server/app.ipynb
@@ -228,10 +228,15 @@
     "\n",
     "# Use async to iterate over the async generator\n",
     "async for event in graph.astream_events({\n",
-    "    \"messages\": [HumanMessage(content=\"Give me poem for kids in 150 words\")]\n",
+    "    \"messages\": [HumanMessage(content=\"Hi I'm Irshad, how are you?\")]\n",
     "}, config=config, version=\"v2\"):\n",
-    "    if event[\"event\"] == \"on_chat_model_stream\":\n",
-    "        print(event[\"data\"][\"chunk\"].content, end=\"\", flush=True)"
+    "    if event[\"event\"]:\n",
+    "        print(event)\n",
+    "# async for event in graph.astream_events({\n",
+    "#     \"messages\": [HumanMessage(content=\"Give me poem for kids in 150 words\")]\n",
+    "# }, config=config, version=\"v2\"):\n",
+    "#     if event[\"event\"] == \"on_chat_model_stream\":\n",
+    "#         print(event[\"data\"][\"chunk\"].content, end=\"\", flush=True)"
    ]
   }
  ],
